# Chat_Room

./: .gitignore  Definitely_Not_the_Key  README.md  build.sh  cClient  cClient.c  cServer  cServer.c  chatClient  chatClient.c  chatClient.py  chatServer  chatServer.c  chatServer.py  tasks.py
C/: CMakeLists.txt  build.sh
C/include/: cServer.h  client.h  server.h
C/src/: CMakeLists.txt  cClient.c  cServer.c  client.c  server.c
C/src/libs/: CMakeLists.txt  client_connect.c  server_bind.c  socket.c
Python/: chatServer.py
c_implementation/include/: socket.h
c_implementation/src/libs/: client_connect.c
c_side/: build.sh
python_implementation/: client.py  server.py
